# django-rest-framework

./: .dockerignore  .env.encrypted  .env.local  .env.pass  .gitignore  Qiita.md  defaultrouter.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  set-up-env.test.sh  simplerouter.md  tmp-key  ⁄
.github/workflows/: checks.yml  linux-command.yml  test.yml  tutorial.yml
api/: urls.py  views.py
app/: settings.py  urls.py
book/: models.py  serializers.py  urls.py  views.py
book/migrations/: 0001_initial.py
bookproject/: settings.py  urls.py
cfehome/: settings.py  urls.py
containers/django/: Dockerfile
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_recipe.py  0002_recipe_image_ingredient_recipe_ingredients.py  0003_rename_descriptions_recipe_description.py
core/tests/: test_admin.py  test_calc.py  test_models.py
products/: models.py
products/migrations/: 0001_initial.py
profiles_api/: models.py  permissions.py  serializers.py  urls.py  views.py
profiles_project/: settings.py  urls.py
recipe/: serializers.py  urls.py  views.py
relationships/: admin.py  celery.py  conftest.py  emails.py  filters.py  models.py  permissions.py  serializers.py  tokens.py  urls.py  user_views.py  views.py
study/: settings.py  urls.py
templates/: list.html  top.html
user/: serializers.py  urls.py  views.py
user/tests/: test_user_api.py
weather/: models.py  serializer.py  urls.py  views.py
weatherproject/: settings.py  urls.py
(+13 files in other folders)
